feat: update record info (excluding attachments)
