# models/record_models.go
@@ -41,4 +41,5 @@ type MedicalRecordBriefInfo struct {
 }
 
 type UpdateMedicalRecordRequest struct {
+	NewRecordDetail pgtype.JSONB `json:"new_record_detail" swaggertype:"object"`
 }
